# coqide.kak

./: Cargo.toml  LICENSE  README.md  parse_coq.py
rc/: coqide.kak  syntax.kak
src/: channels.rs  codespan.rs  daemon.rs  files.rs  lib.rs  logger.rs  main.rs  range.rs  session.rs  state.rs
src/client/: bridge.rs  input.rs  mod.rs
src/client/commands/: decode.rs  mod.rs  types.rs
src/coqtop/: adapter.rs  coqidetop.rs  feedback_queue.rs  mod.rs  process.rs  processor.rs  response_processor.rs  slave.rs
src/coqtop/coqproject/: mod.rs  parser.rs
src/coqtop/xml_protocol/: decode.rs  encode.rs  mod.rs  parser.rs  types.rs
src/kak_protocol/: command.rs  kakoune.rs  mod.rs  processor.rs  types.rs
src/kakoune/: command_line.rs  mod.rs  session.rs  slave.rs  types.rs  ui_updater.rs
src/kakoune/commands/: decode.rs  mod.rs  processor.rs  receiver.rs  types.rs
src/result/: goal.rs  mod.rs  result.rs
src/xml_protocol/: decode.rs  encode.rs  mod.rs  parser.rs  types.rs
test/: Admit.v  BraceBullet.v  Checks.v  Error.v  Goals.v  Imports.v  Interrupt.v  NatProps.v  NatProps2.v  Notation.v  Qualified.v  Shelf.v  SimpleDefinition.v
