[package]
name = "coqide-kak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "1.6.1"
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3"
xmltree = "0.10.3"
signal-hook = { version = "0.3.10", features = ["iterator"] }
exitcode = "1.1.2"
async-process = "1.2.0"
log = "0.4.14"
log4rs = "1.0.0"
nom = "7.0.0"
unix-named-pipe = "0.2.0"
