[package]
name = "coqide-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-signals = "0.3.1"
libc = "0.2.104"
#signal-hook = { version = "0.3.10", features = ["iterator"] }
exitcode = "1.1.2"
log = "0.4.14"
log4rs = "1.0.0"
unix-named-pipe = "0.2.0"
combine = { git = "https://github.com/mesabloo/combine" , features = ["tokio"] }
bytes = "1.*"
tokio-util = { version = "0.6", features = ["codec"] }
tokio = { version = "1.12.0", features = ["net", "fs", "io-util", "process", "rt", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.7" }
bimap = "0.6.1"
